kubeyaml/ingress-kibana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana
  namespace: accounting
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
    - host: kibana.accounting.svc.cluster.local
      http:
        paths:
          - backend:
              service:
                name: kibana-kb-http
                port:
                  number: 5601
            path: /
            pathType: ImplementationSpecific
